DevOCL/src/objects/RuleSet_Catalog__c.object
<CustomObject>
    <description>RuleSet Catalog defines basic information about each rule, including e.g. Name, Effective Start Date, Effective End Date, and Active Version</description>
    <fields>
        <fullName>Active_Class__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Active Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Version__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Active Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <defaultValue>null</defaultValue>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <defaultValue>null</defaultValue>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RuleSet Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_End_Date__c</columns>
        <columns>Active_Version__c</columns>
        <columns>Active_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CID-{0000}</displayFormat>
        <label>Catalog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RuleSet Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>